Fix mobile UI safe area overlaps

--- a/index.css
+++ b/index.css
@@ -6,7 +6,25 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+
 body {
   margin: 0;
   min-height: 100vh;
+}
+
+/* Utils Safe Area */
+.pt-side {
+  padding-top: env(safe-area-inset-top);
+}
+
+.pb-side {
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
+.pt-safe {
+  padding-top: env(safe-area-inset-top);
+}
+
+.pb-safe {
+  padding-bottom: env(safe-area-inset-bottom);
 }
